# bike-beacon

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
bike-lights-sw/: Cargo.toml  Embed.toml  README.md  memory.x
bike-lights-sw/.cargo/: config  config.toml
bike-lights-sw/src/: main.rs
firmware/: Cargo.toml  Embed.toml  README.md
firmware/src/: button_menu.rs  interrupts.rs  main.rs
lis3dh-rs/: Cargo.toml
lis3dh-rs/src/: lib.rs  register.rs
stm32-rs/: .gitignore
stm32-rs/devices/common_patches/: rcc_LSECSSC_LSECSSF.yaml
stm32-rs/peripherals/aes/: aes_l0.yaml
stm32-rs/peripherals/exti/: exti.yaml
stm32-rs/peripherals/fw/: fw_l0_l4.yaml
stm32-rs/stm32l0/: README.md  build.rs
stm32-rs/stm32l0/src/: lib.rs
stm32-rs/stm32l0/src/stm32l0x0/: flash.rs  fw.rs  iwdg.rs  lptim.rs  lpuart1.rs  mod.rs  syscfg.rs
stm32-rs/stm32l0/src/stm32l0x0/adc/: ccr.rs  chselr.rs  tr.rs
stm32-rs/stm32l0/src/stm32l0x0/dbg/: apb1_fz.rs  apb2_fz.rs
stm32-rs/stm32l0/src/stm32l0x0/flash/: optr.rs  pecr.rs  sr.rs  wrprot1.rs  wrprot2.rs
stm32-rs/stm32l0/src/stm32l0x0/fw/: cr.rs  cssa.rs  nvdsl.rs  vdsl.rs  vdssa.rs
stm32-rs/stm32l0/src/stm32l0x0/gpioa/: afrl.rs  lckr.rs  odr.rs
stm32-rs/stm32l0/src/stm32l0x0/i2c1/: cr1.rs
stm32-rs/stm32l0/src/stm32l0x0/iwdg/: rlr.rs  sr.rs
stm32-rs/stm32l0/src/stm32l0x0/lptim/: cnt.rs  ier.rs
stm32-rs/stm32l0/src/stm32l0x0/rcc/: ahbenr.rs  ahbrstr.rs  ahbsmenr.rs  apb1enr.rs  apb1rstr.rs  apb1smenr.rs  apb2enr.rs  ccipr.rs  cifr.rs  cr.rs  csr.rs  iopsmen.rs
stm32-rs/stm32l0/src/stm32l0x0/rtc/: calr.rs  tampcr.rs  tsdr.rs  tstr.rs
stm32-rs/stm32l0/src/stm32l0x0/spi1/: i2spr.rs  sr.rs  txcrcr.rs
stm32-rs/stm32l0/src/stm32l0x0/syscfg/: cfgr1.rs  cfgr2.rs  cfgr3.rs  exticr1.rs  exticr3.rs
stm32-rs/stm32l0/src/stm32l0x0/tim2/: ccmr1_output.rs  ccmr2_input.rs  dier.rs  sr.rs
stm32-rs/stm32l0/src/stm32l0x0/tim21/: arr.rs  cr2.rs
stm32-rs/stm32l0/src/stm32l0x0/tim22/: ccer.rs  ccmr1_input.rs  smcr.rs
stm32-rs/stm32l0/src/stm32l0x1/: aes.rs  flash.rs  mod.rs  pwr.rs  rcc.rs  spi1.rs  tim2.rs  tim22.rs  tim6.rs
stm32-rs/stm32l0/src/stm32l0x1/adc/: ccr.rs  cfgr1.rs  cr.rs  ier.rs
stm32-rs/stm32l0/src/stm32l0x1/aes/: ivr0.rs  keyr0.rs  keyr1.rs  keyr2.rs
stm32-rs/stm32l0/src/stm32l0x1/crc/: cr.rs  dr16.rs  init.rs  pol.rs
stm32-rs/stm32l0/src/stm32l0x1/dma1/: ch.rs  cselr.rs
stm32-rs/stm32l0/src/stm32l0x1/flash/: optkeyr.rs  optr.rs  pdkeyr.rs  pecr.rs  pekeyr.rs  sr.rs  wrprot2.rs
stm32-rs/stm32l0/src/stm32l0x1/fw/: csl.rs
stm32-rs/stm32l0/src/stm32l0x1/gpioa/: afrh.rs  brr.rs  bsrr.rs  moder.rs
stm32-rs/stm32l0/src/stm32l0x1/gpiob/: moder.rs
stm32-rs/stm32l0/src/stm32l0x1/i2c1/: cr2.rs  isr.rs  timingr.rs
stm32-rs/stm32l0/src/stm32l0x1/iwdg/: winr.rs
stm32-rs/stm32l0/src/stm32l0x1/lptim/: cr.rs  isr.rs
stm32-rs/stm32l0/src/stm32l0x1/lpuart1/: cr1.rs  cr2.rs  cr3.rs
stm32-rs/stm32l0/src/stm32l0x1/pwr/: cr.rs  csr.rs
stm32-rs/stm32l0/src/stm32l0x1/rcc/: ahbsmenr.rs  apb1enr.rs  apb1rstr.rs  apb2smenr.rs  cfgr.rs  cicr.rs  cier.rs  icscr.rs  iopenr.rs  ioprstr.rs
stm32-rs/stm32l0/src/stm32l0x1/rtc/: cr.rs  shiftr.rs  ssr.rs  wpr.rs  wutr.rs
stm32-rs/stm32l0/src/stm32l0x1/spi1/: cr1.rs  cr2.rs  i2scfgr.rs
stm32-rs/stm32l0/src/stm32l0x1/syscfg/: cfgr3.rs  comp1_csr.rs  comp2_csr.rs  exticr3.rs  exticr4.rs
stm32-rs/stm32l0/src/stm32l0x1/tim2/: ccer.rs  ccmr1_input.rs  cr1.rs  dcr.rs  egr.rs  smcr.rs
stm32-rs/stm32l0/src/stm32l0x1/tim21/: cr1.rs  or.rs
stm32-rs/stm32l0/src/stm32l0x1/tim22/: or.rs
stm32-rs/stm32l0/src/stm32l0x1/tim6/: egr.rs  sr.rs
stm32-rs/stm32l0/src/stm32l0x1/usart1/: cr3.rs  gtpr.rs
stm32-rs/stm32l0/src/stm32l0x2/: adc.rs  crs.rs  dac.rs  dbg.rs  mod.rs  rng.rs  rtc.rs  stk.rs  syscfg.rs  tim21.rs  tsc.rs  usb.rs
stm32-rs/stm32l0/src/stm32l0x2/adc/: ccr.rs  cfgr2.rs  dr.rs  isr.rs  smpr.rs
stm32-rs/stm32l0/src/stm32l0x2/aes/: ivr3.rs  keyr3.rs
stm32-rs/stm32l0/src/stm32l0x2/crc/: dr.rs  idr.rs
stm32-rs/stm32l0/src/stm32l0x2/crs/: isr.rs
stm32-rs/stm32l0/src/stm32l0x2/dac/: dhr12l2.rs  dhr12ld.rs  dhr12rd.rs  dhr8rd.rs  dor1.rs
stm32-rs/stm32l0/src/stm32l0x2/dbg/: cr.rs  idcode.rs
stm32-rs/stm32l0/src/stm32l0x2/dma1/: ifcr.rs
stm32-rs/stm32l0/src/stm32l0x2/exti/: ftsr.rs  pr.rs
stm32-rs/stm32l0/src/stm32l0x2/flash/: prgkeyr.rs
stm32-rs/stm32l0/src/stm32l0x2/i2c1/: oar1.rs  oar2.rs
stm32-rs/stm32l0/src/stm32l0x2/lptim/: cmp.rs  icr.rs
stm32-rs/stm32l0/src/stm32l0x2/lpuart1/: brr.rs  rqr.rs
stm32-rs/stm32l0/src/stm32l0x2/pwr/: cr.rs
stm32-rs/stm32l0/src/stm32l0x2/rcc/: cfgr.rs  cicr.rs  cifr.rs  crrcr.rs  csr.rs
stm32-rs/stm32l0/src/stm32l0x2/rng/: dr.rs
stm32-rs/stm32l0/src/stm32l0x2/rtc/: alrmassr.rs  alrmbr.rs  calr.rs  dr.rs  or.rs  tr.rs
stm32-rs/stm32l0/src/stm32l0x2/spi1/: rxcrcr.rs
stm32-rs/stm32l0/src/stm32l0x2/stk/: calib.rs  rvr.rs
stm32-rs/stm32l0/src/stm32l0x2/syscfg/: cfgr1.rs  exticr1.rs  exticr2.rs
stm32-rs/stm32l0/src/stm32l0x2/tim2/: ccmr2_output.rs  cnt.rs  or.rs
stm32-rs/stm32l0/src/stm32l0x2/tim21/: cnt.rs
stm32-rs/stm32l0/src/stm32l0x2/tim22/: ccmr1_output.rs  ccr.rs  egr.rs
stm32-rs/stm32l0/src/stm32l0x2/tim6/: cr1.rs  dier.rs  psc.rs
stm32-rs/stm32l0/src/stm32l0x2/tsc/: cr.rs  ioccr.rs  iogcsr.rs  ioscr.rs  isr.rs
stm32-rs/stm32l0/src/stm32l0x2/usart1/: cr2.rs  rtor.rs  tdr.rs
stm32-rs/stm32l0/src/stm32l0x2/usb/: bcdr.rs  cntr.rs  ep0r.rs  ep1r.rs  ep6r.rs  fnr.rs  istr.rs  lpmcsr.rs
stm32-rs/stm32l0/src/stm32l0x2/wwdg/: cfr.rs  cr.rs
stm32-rs/stm32l0/src/stm32l0x3/: dma1.rs  exti.rs  lcd.rs  mod.rs  rcc.rs  usart1.rs
stm32-rs/stm32l0/src/stm32l0x3/adc/: calfact.rs  ccr.rs
stm32-rs/stm32l0/src/stm32l0x3/aes/: cr.rs  dinr.rs  doutr.rs  ivr1.rs  ivr2.rs  sr.rs
stm32-rs/stm32l0/src/stm32l0x3/crc/: dr8.rs
stm32-rs/stm32l0/src/stm32l0x3/crs/: cfgr.rs  cr.rs  icr.rs
stm32-rs/stm32l0/src/stm32l0x3/dac/: cr.rs  dhr12l1.rs  dhr12r1.rs  dhr12r2.rs  (+5 more)
stm32l0xx-hal/: Cargo.toml
stm32l0xx-hal/src/: timer.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+92 files in other folders)
