[package]
authors = ["Alexis Marquet <alexis@alexismarquet.com>"]
edition = "2018"
readme = "README.md"
name = "bike-lights-sw"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
embedded-hal = "0.2.4"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32l0xx-hal = { version = "0.6.2", features = ["mcu-STM32L052K6Tx", "rt"] }
lis3dh = "0.3.0"
accelerometer = "~0.12"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "bike-lights-sw"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
