[package]
authors = ["Alexis Marquet <alexis@alexismarquet.com>"]
name = "firmware"
edition = "2021"
version = "1.0.0"


[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
#panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#stm32l0xx-hal = { features = ["mcu-STM32L052K6Ux", "rt"]}
stm32l0xx-hal = {version = "0.10.0", features = ["mcu-STM32L052K6Ux", "rt", "disable-linker-script"]}
accelerometer = "~0.12"
#lis3dh = {path = "../lis3dh-rs"}
lis3dh = "0.4.2"
shared-bus = {version = "0.2.4", features = ["cortex-m"]}
max170xx = "0.1.0"


[features]
no-sleep = []
default = []



[dev-dependencies]
defmt-test = "0.3.0"
