[package]
authors = ["Alexis Marquet <alexis@alexismarquet.com>"]
name = "firmware"
edition = "2021"
version = "1.0.0"


[dependencies]

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"



#panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#stm32l0xx-hal = { features = ["mcu-STM32L052K6Ux", "rt"]}
stm32l0xx-hal = {path = "../stm32l0xx-hal", version = "0.10.0", features = ["mcu-STM32L052K6Ux", "rt"]}
accelerometer = "~0.12"
#lis3dh = {path = "../lis3dh-rs"}
lis3dh = "0.4.2"
shared-bus = {version = "0.2.4", features = ["cortex-m"]}
max170xx = "0.1.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
embedded-hal = "0.2.7"


[features]
no-sleep = []


[dev-dependencies]



# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3 # <-
overflow-checks = false # <-
