[package]
authors = ["Alexis Marquet <alexis@alexismarquet.com>"]
name = "firmware"
edition = "2021"
version = "1.0.0"


[dependencies]

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"



#panic-probe = { version = "0.3.0", features = ["print-defmt"] }
#stm32l0xx-hal = { features = ["mcu-STM32L052K6Ux", "rt"]}
stm32l0xx-hal = {git="https://github.com/allexoll/stm32l0xx-hal/", branch = "tim-pause-ctrl", version = "0.10.0", features = ["mcu-STM32L052K6Ux", "rt"]}
accelerometer = "~0.12"
#lis3dh = {path = "../lis3dh-rs"}
lis3dh = "0.4.2"
shared-bus = {version = "0.2.4", features = ["cortex-m"]}
max170xx = "0.1.0"
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
embedded-hal = "0.2.7"


[features]
no-sleep = []


[dev-dependencies]
